# mpp_enc_file_demo

./: CMakeLists.txt
mpp/utils/: camera_source.c  camera_source.h
